# dvr

./: .gitignore  Justfile  meson.build  meson.options
examples/: meson.build
examples/assets/: viking_room.mtl
examples/compute/: main.c
examples/model/: main.c
examples/mold/: main.c
examples/shaders/: default_vs.glsl  diffuse_cs.glsl  particle_update_cs.glsl  rt_fs.glsl  rt_render_vs.glsl  smoke_advect_cs.glsl  smoke_diffuse_cs.glsl  smoke_render_fs.glsl  smoke_source_cs.glsl  smoke_velocity_cs.glsl
examples/smoke/: main.c
include/: dvr.h  dvr_log.h  dvr_result.h  dvr_types.h  dvr_utils.h
shaders/: default_fs.glsl  default_vs.glsl
src/: debug.c  dvr.c  header_impl.c  log.c  main.c  utils.c
subprojects/: assimp.wrap  cimgui.wrap
subprojects/packagefiles/cimgui-mesonify/: meson.build
